--- a/srcs/frontend/data/src/pages/social_hub.html
+++ b/srcs/frontend/data/src/pages/social_hub.html
@@ -35,10 +35,14 @@
       <!-- Chat Header -->
       <div class="chat-header p-4 border-b border-neutral-800 flex items-center justify-between">
         <div class="flex items-center gap-3 min-w-0">
-          <span id="chat-header-avatar" class="list-item-avatar flex-shrink-0">—</span>
+          <span id="chat-header-avatar" class="list-item-avatar flex-shrink-0">
+            <svg class="w-5 h-5 text-neutral-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path>
+            </svg>
+          </span>
           <div class="min-w-0">
             <p id="chat-header-name" class="font-semibold truncate text-primary" data-i18n="chat.select_conversation">Sélectionnez une conversation</p>
-            <p id="chat-header-status" class="text-xs text-tertiary">—</p>
+            <p id="chat-header-status" class="text-xs text-tertiary"></p>
           </div>
         </div>
         <div id="chat-header-actions" class="flex items-center gap-2 flex-shrink-0 hidden">
