--- a/srcs/frontend/data/src/pages/tournaments.html
+++ b/srcs/frontend/data/src/pages/tournaments.html
@@ -170,14 +170,14 @@
         <div class="flex gap-4">
           <label class="flex-1">
             <input type="radio" name="tournament-mode" value="online" checked class="hidden peer">
-            <div class="tournament-mode-option peer-checked:tournament-mode-active border border-neutral-600 rounded-lg p-4 text-center cursor-pointer hover:border-neutral-500 transition">
+            <div class="tournament-mode-option border border-neutral-600 rounded-lg p-4 text-center cursor-pointer hover:border-neutral-500 transition peer-checked:border-blue-500 peer-checked:bg-blue-500/10">
               <div class="text-2xl mb-1">🌐</div>
               <div class="text-sm font-medium text-neutral-300" data-i18n="tournaments.mode_online">En ligne</div>
             </div>
           </label>
           <label class="flex-1">
             <input type="radio" name="tournament-mode" value="local" class="hidden peer">
-            <div class="tournament-mode-option peer-checked:tournament-mode-active border border-neutral-600 rounded-lg p-4 text-center cursor-pointer hover:border-neutral-500 transition">
+            <div class="tournament-mode-option border border-neutral-600 rounded-lg p-4 text-center cursor-pointer hover:border-neutral-500 transition peer-checked:border-blue-500 peer-checked:bg-blue-500/10">
               <div class="text-2xl mb-1">🏠</div>
               <div class="text-sm font-medium text-neutral-300" data-i18n="tournaments.mode_local">Local</div>
             </div>
