--- a/srcs/frontend/data/src/pages/stats.html
+++ b/srcs/frontend/data/src/pages/stats.html
@@ -115,7 +115,7 @@
         <h3 class="text-lg font-bold text-primary" data-i18n="stats.recent_games">Dernières parties</h3>
       </div>
       <div class="card-body">
-        <div class="overflow-x-auto">
+        <div class="overflow-x-auto max-h-96 overflow-y-auto">
           <table class="table text-sm">
             <thead>
               <tr>
